# CodersSchool

./: .clang-format  .gitignore  readme.md
.cache/clangd/index/: Factorial.cpp.B9DE681C89CB4A94.idx  Factorial.hpp.F3C84F2C9E78448C.idx  Test.cpp.ED899EC135ABAF93.idx
BasickKnowledge/: readme.md
Compiler&Debugger/: readme.md
Conventions/: readme.md
GoodPractices/: readme.md
HelloWorld/: CMakeLists.txt  build.sh  main.cpp  readme.md
STL/: delete.md  readme.md
SmartPointers/: readme.md
Tests/: readme.md
Tests/Code/Catch2/: CMakeLists.txt  Factorial.cpp  Factorial.hpp  Test.cpp  main.cpp
Tests/Code/GTest/: CMakeLists.txt  Test.cpp
Types/: readme.md
Vim/: init.vim  readme.md
